--- a/app/elements/app-list/app-list.html
+++ b/app/elements/app-list/app-list.html
@@ -1,5 +1,4 @@
 
-
 <script src="../../bower_components/webcomponentsjs/webcomponents-lite.js"></script>
 <link rel="import" href="../../bower_components/iron-pages/iron-pages.html">
 <link rel="import" href="../../bower_components/paper-icon-button/paper-icon-button.html">
@@ -309,6 +308,11 @@
           <section data-category="chequecollection-report">
             <div class="col-md-12">
               <chequecollection-report></chequecollection-report>
+            </div>
+          </section> 
+          <section data-category="consolidated-dashboardreport">
+            <div class="col-md-12">
+              <consolidated-dashboardreport></consolidated-dashboardreport>
             </div>
           </section>     
           </iron-pages>
