--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -274,3 +274,5 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="rtepattern-fee-service/rtepattern-fee-service.html">
 <link rel="import" href="rtecollection-report/rtecollection-report.html">
 <link rel="import" href="chequecollection-report/chequecollection-report.html">
+<link rel="import" href="consolidated-dashboardreport/consolidated-dashboardreport.html">
+<link rel="import" href="consolidated-dashboardreport-service/consolidated-dashboardreport-service.html">
