--- a/app/elements/navigation-bar/navigation-bar.html
+++ b/app/elements/navigation-bar/navigation-bar.html
@@ -424,9 +424,9 @@
             <li id="dailycollectiondashboard">
             <a href="" aria-hidden="true" on-click="FnDailycollectionDashboard">Daily Collection Dashboard<span class="fa arrow"></span></a>
             </li>
-            <!-- <li id="collectiondashboard">
+            <li id="collectiondashboard">
             <a href="" aria-hidden="true" on-click="FnCollectionDashboard">Collection Dashboard<span class="fa arrow"></span></a>
-            </li> -->
+            </li>
             <li id="detailduereport">
             <a href="" aria-hidden="true" on-click="FnDetailduereport">Due report<span class="fa arrow"></span></a>
             </li>
