--- a/app/elements/detailed-feedue-report/detailed-feedue-report.html
+++ b/app/elements/detailed-feedue-report/detailed-feedue-report.html
@@ -44,7 +44,7 @@
                 <div class="col-md-1" style="margin-top: 1%;margin-left: 20%;">
                 <p>Download
                 <a href="#">
-                <span disabled="{{disabledownload}}" class="glyphicon glyphicon-download-alt" onclick="tableToExcel('deatiledduereportt', 'Due report')"></span>
+                <span disabled="{{disabledownload}}" class="glyphicon glyphicon-download-alt" onclick="tableToExcel('detailedduereportt', 'Due report')"></span>
                 </a>
                 </p>
                 </div> 
@@ -52,8 +52,8 @@
           </div>
         </div>
     </div>
-    <div id="deatiledduereportt">
-     <table class="table table-hover">
+    <div id="detailedduereportt">
+     <table class="table table-hover" id="detailedduereportt">
       <thead>
       <tr>
         <th colspan="6"></th><th colspan="4">Fee Structure</th><th colspan="4">Discount On Fee</th><th colspan="2">Commitment Fee Paid</th><th colspan="2">1st Installment Fee Paid</th><th colspan="2">2nd Installment Fee Paid</th><th colspan="2">3rd Installment Fee Paid</th><th colspan="1"></th><th colspan="2">Commitment Fee Due</th><th colspan="2">1st Installment Fee Due</th><th colspan="2">2nd Installment Fee Due</th><th colspan="2">3rd Installment Fee Due</th><th colspan="1"></th>
