--- a/app/elements/custom-fee-service/custom-fee-service.html
+++ b/app/elements/custom-fee-service/custom-fee-service.html
@@ -715,6 +715,13 @@
       },
       fetchInstallmentseperationService:function(){  
 
+        var splitarr=[];
+        var feetype=[];
+        for(var i=0;i<arr.length;i++){
+            if(arr[i].amount=="0")
+                arr.splice(i,1);
+        }
+
         var cashparticular=[];
         var chequeparticular=[];
         var currchequeparticular=[];
@@ -737,29 +744,45 @@
         var tpcnt=0;
         for(var i=0;i<paymentarr.length;i++){
             if(paymentarr[i].mode_of_payment=="Cash"){
-                cashtotal=parseFloat(parseFloat(paymentarr[i].installment_amount)+parseFloat(cashtotal)).toFixed(2);
+                if(paymentarr[i].fine_amount==""||paymentarr[i].fine_amount==null)
+            paymentarr[i].fine_amount=0;
+            if(paymentarr[i].latefee_amount==""||paymentarr[i].latefee_amount==null)
+            paymentarr[i].latefee_amount=0;
+                cashtotal=parseFloat(parseFloat(paymentarr[i].installment_amount)+parseFloat(cashtotal)+parseFloat(paymentarr[i].fine_amount)+parseFloat(paymentarr[i].latefee_amount)).toFixed(2);
                 cashparticular.push({"slno":cashno,"installment":paymentarr[i].installment_type,"feetype":paymentarr[i].fees,"installmentamount":paymentarr[i].installment_amount});
                 cashno++;
             }
             else if(paymentarr[i].mode_of_payment=="Cheque"){
+                if(paymentarr[i].fine_amount==""||paymentarr[i].fine_amount==null)
+            paymentarr[i].fine_amount=0;
+            if(paymentarr[i].latefee_amount==""||paymentarr[i].latefee_amount==null)
+            paymentarr[i].latefee_amount=0;
                 if(paymentarr[i].cheque_date<=paymentarr[i].received_date){
-                currchequetotal=parseFloat(parseFloat(paymentarr[i].installment_amount)+parseFloat(currchequetotal)).toFixed(2);
+                currchequetotal=parseFloat(parseFloat(paymentarr[i].installment_amount)+parseFloat(currchequetotal)+parseFloat(paymentarr[i].fine_amount)+parseFloat(paymentarr[i].latefee_amount)).toFixed(2);
                 currchequeparticular.push({"slno":chequeno,"installment":paymentarr[i].installment_type,"feetype":paymentarr[i].fees,"bankname":paymentarr[i].bank_name,"chequeno":paymentarr[i].cheque_no,"chequedate":paymentarr[i].cheque_date,"installmentamount":paymentarr[i].installment_amount});
                 currchequeno++;
                 }
                 else{
-                chequetotal=parseFloat(parseFloat(paymentarr[i].installment_amount)+parseFloat(chequetotal)).toFixed(2);
+                chequetotal=parseFloat(parseFloat(paymentarr[i].installment_amount)+parseFloat(chequetotal)+parseFloat(paymentarr[i].fine_amount)+parseFloat(paymentarr[i].latefee_amount)).toFixed(2);
                 chequeparticular.push({"slno":chequeno,"installment":paymentarr[i].installment_type,"feetype":paymentarr[i].fees,"bankname":paymentarr[i].bank_name,"chequeno":paymentarr[i].cheque_no,"chequedate":paymentarr[i].cheque_date,"installmentamount":paymentarr[i].installment_amount});
                 chequeno++;
                 }
             }
             else if(paymentarr[i].mode_of_payment=="Transfer"||paymentarr[i].mode_of_payment=="Card Swipe"){
-                transfertotal=parseFloat(parseFloat(paymentarr[i].installment_amount)+parseFloat(transfertotal)).toFixed(2);
+                if(paymentarr[i].fine_amount==""||paymentarr[i].fine_amount==null)
+            paymentarr[i].fine_amount=0;
+            if(paymentarr[i].latefee_amount==""||paymentarr[i].latefee_amount==null)
+            paymentarr[i].latefee_amount=0;
+                transfertotal=parseFloat(parseFloat(paymentarr[i].installment_amount)+parseFloat(transfertotal)+parseFloat(paymentarr[i].fine_amount)+parseFloat(paymentarr[i].latefee_amount)).toFixed(2);
                 transferparticular.push({"slno":transferno,"installment":paymentarr[i].installment_type,"feetype":paymentarr[i].fees,"bankname":paymentarr[i].bank_name,"referenceno":paymentarr[i].reference_no,"receiveddate":paymentarr[i].received_date,"installmentamount":paymentarr[i].installment_amount});
                 transferno++;
             }
             else if(paymentarr[i].mode_of_payment=="Third Party"){
-                tptotal=parseFloat(parseFloat(paymentarr[i].installment_amount)+parseFloat(tptotal)).toFixed(2);
+                if(paymentarr[i].fine_amount==""||paymentarr[i].fine_amount==null)
+            paymentarr[i].fine_amount=0;
+            if(paymentarr[i].latefee_amount==""||paymentarr[i].latefee_amount==null)
+            paymentarr[i].latefee_amount=0;
+                tptotal=parseFloat(parseFloat(paymentarr[i].installment_amount)+parseFloat(tptotal)+parseFloat(paymentarr[i].fine_amount)+parseFloat(paymentarr[i].latefee_amount)).toFixed(2);
                 tpparticular.push({"slno":tpno,"installment":paymentarr[i].installment_type,"feetype":paymentarr[i].fees,"installmentamount":paymentarr[i].installment_amount});
                 tpno++;
             }
@@ -773,6 +796,16 @@
                 obj.admissionno=paymentarr[i].admission_no;
                 obj.studentname=paymentarr[i].student_name;
                 obj.grade=paymentarr[i].grade;
+                if(paymentarr[i].fine_amount==""||paymentarr[i].fine_amount==null)
+            paymentarr[i].fine_amount=0;
+            if(paymentarr[i].latefee_amount==""||paymentarr[i].latefee_amount==null){
+            paymentarr[i].latefee_amount=0;
+            obj.hidelatefeecashparticular=true;
+            obj.hidelatefeechequeparticular=true;
+            }
+
+                obj.fineamount=paymentarr[i].fine_amount;
+                obj.latefeeamount=paymentarr[i].latefee_amount;
                 obj.installment=paymentarr[i].installment;
                 obj.installmentamount=paymentarr[i].installment_amount;
                 obj.actualamount=paymentarr[i].installment_amount;
@@ -791,7 +824,10 @@
                 obj.hidechequeparticular=true;
                 obj.hidetransferparticular=true;
                 obj.hidecurrreceipt=true;
-                obj.hidesplit=true;
+                obj.hidelatefeecashparticular=true;
+                obj.hidelatefeechequeparticular=true;
+                if(obj.installment="Application fee")
+                    obj.hidesplit=true;
                 if(cashcnt==0)
                     feereceiptarr.push(obj);
                 cashcnt++;
@@ -805,6 +841,15 @@
                 obj.admissionno=paymentarr[i].admission_no;
                 obj.studentname=paymentarr[i].student_name;
                 obj.grade=paymentarr[i].grade;
+                if(paymentarr[i].fine_amount==""||paymentarr[i].fine_amount==null)
+            paymentarr[i].fine_amount=0;
+            if(paymentarr[i].latefee_amount==""||paymentarr[i].latefee_amount==null){
+            paymentarr[i].latefee_amount=0;
+            obj.hidelatefeecashparticular=true;
+            obj.hidelatefeechequeparticular=true;
+            }
+                obj.fineamount=paymentarr[i].fine_amount;
+                obj.latefeeamount=paymentarr[i].latefee_amount;
                 obj.installment=paymentarr[i].installment;
                 obj.installmentamount=paymentarr[i].installment_amount;
                 obj.actualamount=paymentarr[i].installment_amount;
@@ -823,7 +868,10 @@
                 obj.hidechequeparticular=true;
                 obj.hidetransferparticular=true;
                 obj.hidecurrreceipt=true;
-                obj.hidesplit=true;
+                obj.hidelatefeecashparticular=true;
+                obj.hidelatefeechequeparticular=true;
+                if(obj.installment="Application fee")
+                    obj.hidesplit=true;
                 if(tpcnt==0)
                     feereceiptarr.push(obj);
                 tpcnt++;
@@ -837,6 +885,15 @@
                 obj.admissionno=paymentarr[i].admission_no;
                 obj.studentname=paymentarr[i].student_name;
                 obj.grade=paymentarr[i].grade;
+                if(paymentarr[i].fine_amount==""||paymentarr[i].fine_amount==null)
+            paymentarr[i].fine_amount=0;
+            if(paymentarr[i].latefee_amount==""||paymentarr[i].latefee_amount==null){
+            paymentarr[i].latefee_amount=0;
+            obj.hidelatefeecashparticular=true;
+            obj.hidelatefeechequeparticular=true;
+            }
+                obj.fineamount=paymentarr[i].fine_amount;
+                obj.latefeeamount=paymentarr[i].latefee_amount;
                 obj.installment=paymentarr[i].installment;
                 obj.installmentamount=paymentarr[i].installment_amount;
                 obj.receiveddate=paymentarr[i].received_date;
@@ -853,7 +910,10 @@
                 obj.hidechequeparticular=false;
                 obj.hidetransferparticular=true;
                 obj.hidecurrreceipt=false;
-                obj.hidesplit=true;
+                obj.hidelatefeecashparticular=true;
+                obj.hidelatefeechequeparticular=true;
+                if(obj.installment="Application fee")
+                    obj.hidesplit=true;
                 if(currchequecnt==0)
                     feereceiptarr.push(obj);
                 currchequecnt++;
@@ -865,6 +925,15 @@
                 obj.admissionno=paymentarr[i].admission_no;
                 obj.studentname=paymentarr[i].student_name;
                 obj.grade=paymentarr[i].grade;
+                if(paymentarr[i].fine_amount==""||paymentarr[i].fine_amount==null)
+            paymentarr[i].fine_amount=0;
+            if(paymentarr[i].latefee_amount==""||paymentarr[i].latefee_amount==null){
+            paymentarr[i].latefee_amount=0;
+            obj.hidelatefeecashparticular=true;
+            obj.hidelatefeechequeparticular=true;
+            }
+                obj.fineamount=paymentarr[i].fine_amount;
+                obj.latefeeamount=paymentarr[i].latefee_amount;
                 obj.installment=paymentarr[i].installment;
                 obj.installmentamount=paymentarr[i].installment_amount;
                 obj.receiveddate=paymentarr[i].received_date;
@@ -881,7 +950,10 @@
                 obj.hidechequeparticular=false;
                 obj.hidetransferparticular=true;
                 obj.hidecurrreceipt=true;
-                obj.hidesplit=true;
+                obj.hidelatefeecashparticular=true;
+                obj.hidelatefeechequeparticular=true;
+                if(obj.installment="Application fee")
+                    obj.hidesplit=true;
                 if(chequecnt==0)
                     feereceiptarr.push(obj);
                 chequecnt++;
@@ -895,6 +967,15 @@
                 obj.admissionno=paymentarr[i].admission_no;
                 obj.studentname=paymentarr[i].student_name;
                 obj.grade=paymentarr[i].grade;
+                if(paymentarr[i].fine_amount==""||paymentarr[i].fine_amount==null)
+            paymentarr[i].fine_amount=0;
+            if(paymentarr[i].latefee_amount==""||paymentarr[i].latefee_amount==null){
+            paymentarr[i].latefee_amount=0;
+            obj.hidelatefeecashparticular=true;
+            obj.hidelatefeechequeparticular=true;
+            }
+                obj.fineamount=paymentarr[i].fine_amount;
+                obj.latefeeamount=paymentarr[i].latefee_amount;
                 obj.installment=paymentarr[i].installment;
                 obj.installmentamount=paymentarr[i].installment_amount;
                 obj.paiddate=paymentarr[i].paid_date;
@@ -911,7 +992,10 @@
                 obj.hidechequeparticular=true;
                 obj.hidetransferparticular=false;
                 obj.hidecurrreceipt=true;
-                obj.hidesplit=true;
+                obj.hidelatefeecashparticular=true;
+                obj.hidelatefeechequeparticular=true;
+                if(obj.installment="Application fee")
+                    obj.hidesplit=true;
                 if(transfercnt==0)
                     feereceiptarr.push(obj);
                 transfercnt++;
