--- a/app/elements/navigation-bar/navigation-bar.html
+++ b/app/elements/navigation-bar/navigation-bar.html
@@ -430,9 +430,9 @@
             <li id="detailduereport">
             <a href="" aria-hidden="true" on-click="FnDetailduereport">Due report<span class="fa arrow"></span></a>
             </li>
-            <!-- <li id="reportprocessing">
+            <li id="reportprocessing">
             <a href="" aria-hidden="true" on-click="FnProcessreport">Process Report<span class="fa arrow"></span></a>
-            </li> -->
+            </li>
             </ul>
           </li>         
 
