--- a/app/elements/cancellation-service/cancellation-service.html
+++ b/app/elements/cancellation-service/cancellation-service.html
@@ -124,6 +124,7 @@
       cancelenrollmentResponse:function(e){
         alert(e.detail.response.returnval);
         if(e.detail.response.returnval=='Cancelled!'){
+          document.querySelector('cancel-enrollment-card').FnRefresh();
           document.querySelector('cancel-enrollment-itemcard').FnRefresh(); 
           this.fetchinfofortcService();
           // this.getadmittedcount();
